fix: solve issue with overflow and bug in the breed filter

--- a/src/app/styles/components/explore.scss
+++ b/src/app/styles/components/explore.scss
@@ -2,11 +2,15 @@
 
 .explore {
   &__wrapper {
-    margin-top: 3rem;
+    margin-top: 1rem;
 
     @media screen and (min-width: 30rem) {
-      margin-top: 4rem;
+      margin-top: 2rem;
     }
+  }
+
+  &__header {
+    padding-top: 2rem;
   }
 
   &__title {
