--- a/src/app/styles/components/hero.scss
+++ b/src/app/styles/components/hero.scss
@@ -124,22 +124,15 @@
         content: "";
         position: absolute;
         bottom: calc(var(--size) * -0.25);
-        right: calc(var(--size) * -0.25);;
+        left: calc(var(--size) * -0.25);
+        ;
         width: var(--size);
         height: var(--size);
         background-image:
-          radial-gradient(
-            circle at 25% 25%, var(--clr-green) 12.5%, transparent 12.5%
-          ),
-          radial-gradient(
-            circle at 75% 25%, var(--clr-blue) 12.5%, transparent 12.5%
-          ),
-          radial-gradient(
-            circle at 25% 75%, rgb(234, 170, 225) 12.5%, transparent 12.5%
-          ),
-          radial-gradient(
-            circle at 75% 75%, var(--clr-mint) 12.5%, transparent 12.5%
-          );
+          radial-gradient(circle at 25% 25%, var(--clr-green) 12.5%, transparent 12.5%),
+          radial-gradient(circle at 75% 25%, var(--clr-blue) 12.5%, transparent 12.5%),
+          radial-gradient(circle at 25% 75%, rgb(234, 170, 225) 12.5%, transparent 12.5%),
+          radial-gradient(circle at 75% 75%, var(--clr-mint) 12.5%, transparent 12.5%);
         background-size: 25% 25%;
         background-repeat: repeat;
       }
